fixed spacing

--- a/frontend/src/components/ArtistsSongs/ArtistsSongs.css
+++ b/frontend/src/components/ArtistsSongs/ArtistsSongs.css
@@ -1,6 +1,7 @@
 .artist-song-heading {
   color: white;
   margin-left: 22%;
+  margin-top: 2%;
 }
 
 .smaller {
